add quantization; implement serialization w/ quantization

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -12,15 +12,17 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-24T08:41:05.771677Z",
-     "start_time": "2024-07-24T08:41:05.768502Z"
+     "end_time": "2024-07-26T08:29:48.494489Z",
+     "start_time": "2024-07-26T08:29:45.525973Z"
     }
    },
    "source": [
     "import ast\n",
-    "import numpy as np\n",
     "import time \n",
     "import re\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -31,7 +33,7 @@
     "import tiktoken"
    ],
    "outputs": [],
-   "execution_count": 102
+   "execution_count": 223
   },
   {
    "metadata": {
@@ -245,6 +247,8 @@
     "    :param max_length: maximum length for padding/truncation fo input stirngs\n",
     "    :return: both mean-pooled sentence embedding and masked word embeddings \n",
     "    \"\"\"\n",
+    "    \n",
+    "    \n",
     "    encoded = _tokenize(labels, tokenizer, max_length)\n",
     "    embeddings_sentences, embeddings_words = _embed(encoded, model)\n",
     "\n",
@@ -736,30 +740,45 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Export",
+   "source": "# Quantize Images",
    "id": "c4570e199220effe"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-25T05:20:06.899755Z",
-     "start_time": "2024-07-25T05:20:06.893273Z"
+     "end_time": "2024-07-26T08:44:47.737917Z",
+     "start_time": "2024-07-26T08:44:47.733392Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def export_data(inputs, labels, embeddings, filename):\n",
-    "    data = {\n",
-    "        'annotation_ids': ann_ids,\n",
-    "        'images': maps,\n",
-    "        'labels': labels,\n",
-    "        'embeddings': embeddings\n",
-    "    }\n",
-    "    np.save(filename, data, allow_pickle=True)"
+    "def quantize_images(images, n_colors=16, model=None, seed=0):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    :param images: (n, w, h, 3) numpy array \n",
+    "    :param n_colors: number of RGB colors to quantize\n",
+    "    :param model: k-means model; overrides n_colors if present \n",
+    "    :return: OHT images (n, w, h) with value up to n_colors\n",
+    "             RGB values of encoding\n",
+    "             k-means model in case it needs to predict future \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    n, l, w, d = images.shape\n",
+    "    pixels = np.reshape(images, (n*l*w, d))\n",
+    "    \n",
+    "    if not model: \n",
+    "        model = KMeans(n_clusters=n_colors, random_state=seed).fit(pixels)\n",
+    "    \n",
+    "    rgb_colors = model.cluster_centers_.astype(int)\n",
+    "    \n",
+    "    quantized_pixels = model.predict(pixels)\n",
+    "    quantized_images = np.reshape(quantized_pixels, (n, l, w))\n",
+    "    \n",
+    "    return quantized_images, rgb_colors, model    "
    ],
-   "id": "58c6ef7d9a106c7b",
+   "id": "63ee0f99dc1883e8",
    "outputs": [],
-   "execution_count": 130
+   "execution_count": 245
   },
   {
    "metadata": {},
@@ -858,31 +877,33 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T07:15:44.293339Z",
-     "start_time": "2024-07-26T07:15:44.290213Z"
+     "end_time": "2024-07-26T08:48:18.126082Z",
+     "start_time": "2024-07-26T08:48:18.116921Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# TODO: read in the raw training data \n",
-    "images = np.asarray([np.random.rand(16,16,16) for _ in range(5)])\n",
-    "labels = np.asarray([\n",
+    "raw_images = np.random.randint(0, 256, (5, 16, 16, 3), dtype=np.uint8)\n",
+    "images, rgb_colors, quantizer = quantize_images(raw_images, n_colors=16)\n",
+    "\n",
+    "labels = [\n",
     "    'a strong guy wearing a blue headband and a red shirt',\n",
     "    'a blue-colored duck wearing a red band',\n",
     "    'a woman in green with yellow hair',\n",
     "    'a dog wearing a black cap',\n",
     "    'a guy in blue shoes, a red cap, and a green top'\n",
-    "])"
+    "]"
    ],
    "id": "25cd4639c108367f",
    "outputs": [],
-   "execution_count": 209
+   "execution_count": 247
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T07:15:50.020120Z",
-     "start_time": "2024-07-26T07:15:50.017081Z"
+     "end_time": "2024-07-26T08:48:19.404542Z",
+     "start_time": "2024-07-26T08:48:19.400056Z"
     }
    },
    "cell_type": "code",
@@ -892,21 +913,21 @@
     {
      "data": {
       "text/plain": [
-       "(5, 16, 16, 16)"
+       "(5, 16, 16)"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 210
+   "execution_count": 248
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T06:57:21.008784Z",
-     "start_time": "2024-07-26T06:57:18.729609Z"
+     "end_time": "2024-07-26T08:48:23.653276Z",
+     "start_time": "2024-07-26T08:48:21.083810Z"
     }
    },
    "cell_type": "code",
@@ -917,29 +938,35 @@
    ],
    "id": "b5a13ee0b3b31180",
    "outputs": [],
-   "execution_count": 164
+   "execution_count": 249
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T07:12:38.897566Z",
-     "start_time": "2024-07-26T07:12:38.893933Z"
+     "end_time": "2024-07-26T09:03:18.535628Z",
+     "start_time": "2024-07-26T09:03:18.530276Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "images_aug_mixup, embeddings_aug_mixup, idxs_aug_mixup = generate_augmentation_mixup(images, embeddings, n_mixups=1, lmbda=0.5)\n",
+    "# pass in raw_images to mixup along with embeddings \n",
+    "images_aug_mixup_raw, embeddings_aug_mixup, idxs_aug_mixup = generate_augmentation_mixup(raw_images, embeddings, n_mixups=1, lmbda=0.5)\n",
+    "\n",
+    "# requantize mixed up images using original clusters \n",
+    "images_aug_mixup, _, _ = quantize_images(raw_images, model=quantizer)\n",
+    "\n",
+    "# generate new labels; callit MIXUP as the original labels are useless since the embeddings are interpolated \n",
     "labels_aug_mixup = [f'MIXUP idxs {i}' for i in idxs_aug_mixup]"
    ],
    "id": "e5d59505f2bbf3cd",
    "outputs": [],
-   "execution_count": 206
+   "execution_count": 281
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T07:12:40.264261Z",
-     "start_time": "2024-07-26T07:12:40.261659Z"
+     "end_time": "2024-07-26T08:52:07.232494Z",
+     "start_time": "2024-07-26T08:52:07.229981Z"
     }
    },
    "cell_type": "code",
@@ -954,16 +981,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 3), (1, 0), (2, 4), (3, 3), (4, 4)]\n",
-      "['MIXUP idxs (0, 3)', 'MIXUP idxs (1, 0)', 'MIXUP idxs (2, 4)', 'MIXUP idxs (3, 3)', 'MIXUP idxs (4, 4)']\n"
+      "[(0, 0), (1, 2), (2, 0), (3, 4), (4, 0)]\n",
+      "['MIXUP idxs (0, 0)', 'MIXUP idxs (1, 2)', 'MIXUP idxs (2, 0)', 'MIXUP idxs (3, 4)', 'MIXUP idxs (4, 0)']\n"
      ]
     }
    ],
-   "execution_count": 207
+   "execution_count": 259
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-26T09:00:49.325604Z",
+     "start_time": "2024-07-26T09:00:47.924723Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "# Generate GPT alt labels \n",
+    "labels_gpt = get_gpt_alt_labels(labels, model='gpt-4o-mini', num_retries=3, debug=False)"
+   ],
+   "id": "a64538bb330c63da",
    "outputs": [
     {
      "name": "stdout",
@@ -978,59 +1015,144 @@
       "a dog wearing a black cap\n",
       "6\n",
       "a guy in blue shoes, a red cap, and a green top\n",
-      "14\n",
-      "Prompt size: 155\n",
-      "split time = 0.004884958267211914\n",
-      "Number of loops:  1\n",
-      "Loop 0 running through array of size 5\n",
-      "api call time = 1.562959909439087\n"
+      "14\n"
      ]
     }
    ],
-   "execution_count": 140,
-   "source": [
-    "# Generate GPT alt labels \n",
-    "alt_labels = get_gpt_alt_labels(labels, model='gpt-4o-mini', num_retries=3, debug=False)"
-   ],
-   "id": "a64538bb330c63da"
+   "execution_count": 270
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-26T08:52:19.776829Z",
+     "start_time": "2024-07-26T08:52:17.824603Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 167,
    "source": [
     "# Get GPT embeddings and additional noise \n",
     "embeddings_gpt, _ = get_sent_word_embeddings(alt_labels, MODEL, TOKENIZER)\n",
     "embeddings_aug_gpt, idxs_aug_gpt = interpolate_embeddings(embeddings, embeddings_gpt, n_steps=1)"
    ],
-   "id": "cb2e826bf6adf831"
+   "id": "cb2e826bf6adf831",
+   "outputs": [],
+   "execution_count": 261
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-26T07:20:08.004688Z",
-     "start_time": "2024-07-26T07:20:07.997868Z"
+     "end_time": "2024-07-26T08:53:38.563752Z",
+     "start_time": "2024-07-26T08:53:38.561303Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def _rearrange(lst, idxs):\n",
+    "    \"\"\"\n",
+    "    shortcut for list comprehension to reorder as python lists don't behave like ndarrays\n",
+    "    but the tokenizers require python lists -> easier to rearrange lists than the other way around\n",
+    "    :param lst: python 1d list \n",
+    "    :param idxs: list of indices to reorder \n",
+    "    :return: reordered list \n",
+    "    \"\"\"\n",
+    "    return [lst[i] for i in idxs]"
+   ],
+   "id": "691fbcf5be4415",
+   "outputs": [],
+   "execution_count": 265
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-26T09:02:18.282367Z",
+     "start_time": "2024-07-26T09:02:18.273460Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# generate final training data \n",
-    "training_images =(images, images[idxs_aug_noise], images_aug_mixup, images[idxs_aug_gpt])\n",
-    "training_labels = (labels, labels[idxs_aug_noise], labels_aug_mixup, labels[idxs_aug_gpt])\n",
-    "training_embeddings = (embeddings, embeddings_noise, embeddings_aug_mixup, embeddings_aug_gpt)\n",
+    "training_images = (images, images[idxs_aug_noise], images_aug_mixup, images, images[idxs_aug_gpt])\n",
+    "\n",
+    "labels_aug_noise = _rearrange(labels, idxs_aug_noise)\n",
+    "labels_aug_gpt = _rearrange(labels, idxs_aug_gpt)\n",
+    "\n",
+    "training_labels = (labels, labels_aug_noise, labels_aug_mixup, labels_gpt, labels_aug_gpt)\n",
+    "training_embeddings = (embeddings, embeddings_noise, embeddings_aug_mixup, embeddings_gpt, embeddings_aug_gpt)\n",
+    "training_categories = (\n",
+    "    np.full(len(labels), 'original'), \n",
+    "    np.full(len(labels_aug_noise), 'noise'), \n",
+    "    np.full(len(labels_aug_mixup), 'mixup'),\n",
+    "    np.full(len(labels_gpt), 'gpt'),\n",
+    "    np.full(len(labels_aug_gpt), 'gpt embedding interpolation'))\n",
+    "\n",
     "\n",
     "data_train = {\n",
     "    'images': np.concatenate(training_images, axis=0),\n",
     "    'labels': np.concatenate(training_labels, axis=0),\n",
-    "    'embeddings': np.concatenate(training_embeddings, axis=0)\n",
+    "    'embeddings': np.concatenate(training_embeddings, axis=0),\n",
+    "    'categories': np.concatenate(training_categories, axis=0)\n",
     "}\n",
     "\n",
     "np.save('datasets/data_train.npy', data_train, allow_pickle=True)"
    ],
    "id": "4be42784d62ce258",
    "outputs": [],
-   "execution_count": 219
+   "execution_count": 272
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-26T09:03:09.700916Z",
+     "start_time": "2024-07-26T09:03:09.698419Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_train['categories'].shape",
+   "id": "b9cb0998dc5c00bd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(35,)"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 280
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-26T09:02:37.955860Z",
+     "start_time": "2024-07-26T09:02:37.953249Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_train['categories']",
+   "id": "c922503f2ecdece",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['original', 'original', 'original', 'original', 'original',\n",
+       "       'noise', 'noise', 'noise', 'noise', 'noise', 'noise', 'noise',\n",
+       "       'noise', 'noise', 'noise', 'noise', 'noise', 'noise', 'noise',\n",
+       "       'noise', 'mixup', 'mixup', 'mixup', 'mixup', 'mixup', 'gpt', 'gpt',\n",
+       "       'gpt', 'gpt', 'gpt', 'gpt embedding interpolation',\n",
+       "       'gpt embedding interpolation', 'gpt embedding interpolation',\n",
+       "       'gpt embedding interpolation', 'gpt embedding interpolation'],\n",
+       "      dtype='<U27')"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 275
   }
  ],
  "metadata": {
