add rgb to hex conv; update trianing data

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -941,8 +941,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-27T22:37:58.489859Z",
-     "start_time": "2024-07-27T22:37:58.441030Z"
+     "end_time": "2024-07-28T06:04:00.284102Z",
+     "start_time": "2024-07-28T06:03:59.786050Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def to_hex(rgb_colors):\n",
+    "    return ['#{:02x}{:02x}{:02x}'.format(r, g, b) for (r,g,b) in rgb_colors]"
+   ],
+   "id": "d886878bec82ad44",
+   "outputs": [],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-28T06:04:11.174998Z",
+     "start_time": "2024-07-28T06:04:11.105718Z"
     }
    },
    "cell_type": "code",
@@ -969,13 +985,14 @@
     "    'embeddings': np.concatenate(training_embeddings, axis=0),\n",
     "    'categories': np.concatenate(training_categories, axis=0),\n",
     "    'rgb_colors': rgb_colors,\n",
+    "    'hex_colors': to_hex(rgb_colors),\n",
     "}\n",
     "\n",
     "np.save('datasets/data_train.npy', data_train, allow_pickle=True)"
    ],
    "id": "4be42784d62ce258",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 29
   },
   {
    "metadata": {},
